assets/scss/partials/components/_search.scss
@use 'modules/color_theme' as color;
@use 'modules/config' as conf;

.search {
  display: flex;
  margin: 1.5em 30px 0 30px;
  position: relative;
  gap: 1rem;

  label {
    margin: auto;
    padding: 5px 5px 5px 8px;
    border-radius: 24px;
    min-width: 16px;
    display: flex;
    position: relative;
    left: 4px;

    @include color.themed() {
      $pastels: color.t('pastels');
      background: nth($pastels, 5);
    }

    &::after {
      content: 'Search';
      padding: 0 0.7rem;
      font-weight: 400;
      font-size: 0.9em;
      font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Open Sans',
        'Helvetica Neue',
        sans-serif;
    }
  }

  &:hover label,
  &.active label,
  & label:has(+ #search__text:focus) {
    padding: 5px;
    left: 0;

    &::after {
      content: '';
      padding: 0;
    }
  }

  &:hover #search__text,
  &.active #search__text,
  #search__text:focus {
    width: 100%;
    opacity: 1;
    padding: 0 0.5em;
    border-width: 1px;
  }
}

#search__text {
  opacity: 0;
  border-radius: 0.2rem;
  outline: none;
  line-height: 3rem;
  width: 0;
  overflow-x: hidden;
  transition: width 200ms;

  @include color.themed() {
    $pastels: color.t('pastels');
    border: 0 solid nth($pastels, 5);
    background: color.t('accent');
    caret-color: color.t('primary');
    color: color.t('primary');
  }

  &:focus {
    @include color.themed() {
      border: 1px solid color.t('primary-light');
    }
  }

  &::placeholder {
    @include color.themed() {
      color: color.t('primary-light');
    }
  }

  &[type='search']::-webkit-search-cancel-button {
    appearance: none;
  }
}

#search__suggestions {
  border-radius: 0.2rem;
  left: 3.5rem;
  top: 4rem;
  position: absolute;
  width: calc(100% - 3.5rem);
  z-index: 1000;

  @include color.themed() {
    background: color.t('accent');
    box-shadow: 0 0.5rem 1rem color.t('primary-lighter');
  }

  @include conf.mobile() {
    left: 0;
    width: 100%;
  }
}

.search__suggestions--hidden {
  display: none;
}

.search__no-results {
  padding: 5px;
}

.search__suggestion-item {
  display: flex;
  align-items: center;
  padding: 1rem;
  gap: 1rem;

  @include color.themed() {
    border-bottom: 1px dashed color.t('primary-lighter');
  }

  &:focus,
  &:focus-visible,
  &:hover {
    cursor: pointer;
    outline: none;

    @include color.themed() {
      background: color.t('primary-lighter');
    }
  }

  img {
    width: 40px;
    height: 40px;
    object-fit: cover;
    border-radius: 4px;
  }
}

.search__suggestion-title {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 4px;
  font-weight: 500;

  span {
    @include color.themed() {
      color: color.t('primary-light');
    }

    &:last-of-type {
      font-size: 0.75em;
    }
  }
}

